fix(toggle): fix collapse toggle

--- a/src/core/animation/_animation.less
+++ b/src/core/animation/_animation.less
@@ -36,3 +36,7 @@
     content: 'xt-collapse-width';
   }
 }
+
+.collapse-reset {
+  overflow: visible !important;
+}
